feat(doc): #2994.200 add refs to some rules
- Added ASVS references to R183, R237, R327, R342
- Added CWE references to R183 and R327
- Updated R327 and R342 keywords
- Updated some SEO descriptions for length compliance
- Fixed some minor typos


Former-commit-id: b7ad237eb9e5c6f9354a84d6e8280e6c24c4ccba

--- a/content/pages/rules/architecture/327/index.adoc
+++ b/content/pages/rules/architecture/327/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/327/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of resources and services in the organization. This requirement establishes the importance of establishing a rate limit to control interaction frequency.
-:keywords: Rate, Limit, Interaction, Frequency, ASVS, CWE
+:description: This requirement establishes the importance of establishing a rate limit to control interaction frequency.
+:keywords: Rate, Limit, Interaction, Frequency, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R327. Set rate limit
@@ -35,12 +35,18 @@ request flow between a host and the server.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/799.html[CWE-799: Improper Control of Interaction Frequency]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/770.html[CWE-770: Allocation of Resources Without Limits or Throttling].
+The software allocates a reusable resource or group of resources on behalf of
+an actor without imposing any restrictions on the size or number of resources
+that can be allocated,
+in violation of the intended security policy for that actor.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/799.html[CWE-799: Improper Control of Interaction Frequency].
 The software does not properly limit the number or frequency of interactions
 that it has with an actor,
 such as the number of incoming requests.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.1)]
 Verify that anti-automation controls are effective at mitigating breached
 credential testing, brute force, and account lockout attacks.
@@ -52,14 +58,20 @@ recent attempts to unlock the account, or similar.
 Verify that no more than 100 failed attempts per hour is possible on a single
 account.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.2)]
 Verify the application will only process business logic flows with all steps
 being processed in realistic human time,
 i.e. transactions are not submitted too quickly.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.4)]
 Verify the application has sufficient anti-automation controls to detect and
 protect against data exfiltration, excessive business logic requests, excessive
 file uploads or denial of service attacks.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.1 General Data Protection.(8.1.4)]
+Verify the application can detect and alert on abnormal numbers of requests,
+such as by IP, user, total per hour or day, or whatever makes sense for the
+application.
