--- a/content/pages/rules/source/342/index.adoc
+++ b/content/pages/rules/source/342/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/342/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source in the organization. This requirement establishes the importance of properly validating the content, length and amount of request parameters.
-:keywords: Request, Parameter, Validation, Pollution, ASVS, CWE
+:description: This requirement establishes the importance of properly validating the content, length and amount of request parameters.
+:keywords: Request, Parameter, Validation, Pollution, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R342. Validate request parameters
@@ -66,3 +66,8 @@ V5.1 Input Validation Requirements.(5.1.3)]
 Verify that all input (*HTML* form fields, *REST* requests, *URL* parameters,
 *HTTP* headers, cookies, batch files, *RSS* feeds, etc) is validated using
 positive validation (*whitelisting*).
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.1 General Data Protection.(8.1.3)]
+Verify the application minimizes the number of parameters in a request,
+such as hidden fields, *Ajax* variables, cookies and header values.
