--- a/content/blog/vulnserver-kstet-alternative/index.adoc
+++ b/content/blog/vulnserver-kstet-alternative/index.adoc
@@ -14,7 +14,7 @@
 :about2: "We don't need the key, we'll break in" RATM
 :source: https://unsplash.com/photos/iIJrUoeRoCQ
 
-= KSTET: Sideloading exploiting
+= KSTET: DLL Side-loading exploit
 
 This is an alternate take of the article of exploiting the
 link:../vulnserver-kstet/[KSTET] command  of `Vulnserver`, a VbD
@@ -313,8 +313,8 @@ modify the instruction pointer `EIP` to point to your code. Then, the
 victim application will execute the code you injected that can be a simple
 `MessageBox` or anything complex like a `TCP` shell.
 
-That payload, or shellcode, can only use calls to the OS API that the
-victim application has already loaded in memory.
+That payload, or shellcode, can only use calls to the OS API of modules
+that the victim application has already loaded in memory.
 
 The OS API is distributed on reusable files that can be linked to any
 application. In Windows they are known as *Dynamic-Link Library* or `DLL`
@@ -332,12 +332,13 @@ function included on any of those modules.
 However, there is a way for an application to include new libraries when it's
 already running: *Dynamic Linking*. On Windows, it can be done with any of the
 *LibraryLoad* functions family. Those functions are located on `KERNEL32.DLL`,
-which is a module that virtually any Windows application loads at run-time.
+which is the module that exposes most of the Win32 base API and therefore
+virtually any Windows application has it loaded at run-time.
 
 As the injected shellcode is also part of the application, we can
 dyncamically link any available `DLL` too.
 
-With that simplified introduction to dynamic linking, it's time to write
+With that ultra-simplified introduction to dynamic linking, it's time to write
 some Assembler!
 
 == Dynamic-included payload
@@ -353,8 +354,9 @@ arwin - win32 address resolution program - by steve hanna - v.01
 LoadLibraryA is located at 0x76460b30 in kernel32
 ----
 
-*NOTE:* I'm using `Windows 10 20H2` at the moment of this writing. The
-function addresses will likely change on different OS versions.
+*NOTE:* I'm using `Windows 10 Pro 20H2` at the moment of this writing. As
+`ASLR` is enabled by default, the `LoadLibraryA` address will change on
+every reboot.
 
 We also need to know the `LoadLibraryA` parameters:
 
@@ -371,15 +373,15 @@ be included. To our advantage, the location can be an Universal Naming
 Convention (`UNC`) path in the form `\\server\share\file.dll`.
 
 In Windows, that path would be resolved using the `SMB` protocol. That means
-that we must expose that file using a `SMB` server. But we will get to that
+that we must expose that file using a `SMB` server, but we will get to that
 later. For now, we can predict that the `UNC` path of our payload will
-be at `\\attacker_ip\share\shell.dll`. In my case, it would be
+be at `\\attacker_ip\share\shell.dll`, in my case, it would be
 `\\192.168.0.18\X\pwn.dll`.
 
 To call `LoadLibraryA` on a `x86` architecture, we must push to the stack
 the `lpLibFileName` value which is a pointer to the
 `\\192.168.0.18\X\pwn.dll` string. As `x86` is a 32 bits architecture, we
-must push exactly 4 bytes each time to the stack. And as we are pushing data
+must push exactly 4 bytes each time to the stack, and as we are pushing data
 to the stack, it must be in reverse order. So, we need to convert
 `\\192.168.0.18\X\pwn.dll` to hex, split it in chunks of 4 bytes, pad as
 needed and reverse. This can be done with:
@@ -516,7 +518,12 @@ image::success.gif[Success]
 Yes! We got a shell! You can see how the victim is self-hacking by retrieving
 the payload from our attacking machine!
 
-You can download the final exploit link:exploit.py[here]
+You can also see that `pwn.dll` is now part of the `vulnserver.exe`
+executable modules:
+
+image::modules2.png[Executable modules]
+
+Crazy, huh? You can download the final exploit link:exploit.py[here]
 
 == Conclusion
 
