refac(doc): #3423.15 fix-descriptions-keywords
- Descriptions were shortened, and keywords were added on some pages.


Former-commit-id: e9679c037a02129660407aa4a2ce2e1fe9f6f368

--- a/content/pages/rules/architecture/327/index.adoc
+++ b/content/pages/rules/architecture/327/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/327/
 :category: architecture
-:description: This requirement establishes the importance of establishing a rate limit to control interaction frequency.
+:description: This requirement establishes the importance of setting a rate limit to control interaction frequency.
 :keywords: Rate, Limit, Interaction, Frequency, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
