--- a/content/pages/rules/credentials/333/index.adoc
+++ b/content/pages/rules/credentials/333/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/333/
 :category: credentials
 :description: This requirement establishes the importance of storing the salt values used in the hashing process separately from hashed passwords.
-:keywords: Salt, Store, Separately, ASVS, CWE, NIST
+:keywords: Salt, Store, Separately, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R333. Store salt values separately
