--- a/content/pages/rules/architecture/320/index.adoc
+++ b/content/pages/rules/architecture/320/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/320/
 :category: architecture
-:description: This document details the security guidelines and requirements related to logical architecture management within the organization. This requirement establishes the importance of enforcing access control on the server's side instead of on the client's.
-:keywords: Control Enforcement, Client, Server, Access, ASVS, CWE
+:description: This requirement establishes the importance of enforcing access control on the server's side instead of on the client's.
+:keywords: Control Enforcement, Client, Server, Access, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R320. Avoid client-side control enforcement
