--- a/content/pages/rules/architecture/324/index.adoc
+++ b/content/pages/rules/architecture/324/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/324/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of resources and services in the organization. This requirement establishes the importance of controlling redirects as they may lead to malicious sites.
-:keywords: Control, Redirect, External, Site, ASVS, CWE
+:description: This requirement establishes the importance of controlling redirects as they may lead to malicious sites.
+:keywords: Control, Redirect, External, Site, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R324. Control redirects
