--- a/content/pages/rules/architecture/325/index.adoc
+++ b/content/pages/rules/architecture/325/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/325/
 :category: architecture
-:description: This document contains the details of the security requirements related to the definition and management of resources and services in the organization. This requirement establishes the importance of restricting access to WSDL files containing sensitive information.
-:keywords: WSDL, File, Web, Services, ASVS, CWE
+:description: This requirement establishes the importance of restricting access to WSDL files containing sensitive information.
+:keywords: WSDL, File, Web, Services, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R325. Protect WSDL files
