--- a/content/pages/rules/authentication/335/index.adoc
+++ b/content/pages/rules/authentication/335/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/335/
 :category: authentication
-:description: This document details the security requirements and guidelines related to the authentication process performed in the applications. This requirement establishes the importance of limiting the lifespan of out of band authenticators and the number of times they can be used.
-:keywords: Out-of-band, Token, Lifespan, ASVS, CWE, NIST
+:description: This requirement establishes the importance of limiting the lifespan of out of band authenticators and the number of times they can be used.
+:keywords: Out-of-band, Token, Lifespan, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R335. Define out of band tokens lifespan
