--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -1,15 +1,15 @@
 :slug: rules/332/
 :category: credentials
-:description: This documents contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of checking passwords against a set of breached passwords.
-:keywords: Breached, Leaked, Password, Account, ASVS, CWE
+:description: This requirement establishes the importance of checking new passwords against a set of breached passwords.
+:keywords: Breached, Leaked, Password, Account, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R332. Prevent the use of breached passwords
 
 == Requirement
 
-The system must check new passwords against a list of 1000 to 10000 breached
-passwords.
+The system must check new passwords
+against a list of 1000 to 10000 breached passwords.
 
 == Description
 
