--- a/content/pages/rules/cryptography/338/index.adoc
+++ b/content/pages/rules/cryptography/338/index.adoc
@@ -1,15 +1,15 @@
 :slug: rules/338/
 :category: cryptography
-:description: This document contains the details of the security requirements related to the definition and management of cryptographic mechanisms in the organization. This requirement establishes the importance of implementing perfect forward secrecy for communications with critical sensitive information.
-:keywords: Perfect, Forward, Secrecy, ASVS, CWE, NIST
+:description: This requirement establishes the importance of implementing perfect forward secrecy for communications with critical sensitive information.
+:keywords: Perfect, Forward, Secrecy, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R338. Implement perfect forward secrecy
 
 == Requirement
 
-Critical communications should travel through a secure channel that implements
-**perfect forward secrecy**.
+Critical communications should travel through a secure channel
+that implements **perfect forward secrecy**.
 
 == Descriptions
 
