--- a/content/pages/rules/files/340/index.adoc
+++ b/content/pages/rules/files/340/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/340/
 :category: files
-:description: This document details the security guidelines and requirements related to files management within the organization or company. In this case, it is strongly recommended that the system serve files coming from untrusted sources using octet stream downloads.
-:keywords: Octet, Stream, File, Download, ASVS, CWE
+:description: This requirement states that the system must serve files coming from untrusted sources using octet stream downloads.
+:keywords: Octet, Stream, File, Download, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R340. Use octet stream downloads
