--- a/content/pages/rules/legal/331/index.adoc
+++ b/content/pages/rules/legal/331/index.adoc
@@ -1,15 +1,15 @@
 :slug: rules/331/
 :category: legal
-:description: This document contains the details of the security requirements related to the definition and management of compliance with legal regulations in the organization. This requirement establishes the importance of guaranteeing compliance with applicable legal regulations.
-:keywords: Requirement, Legal, Law, Regulation, ASVS, GDPR
+:description: This requirement establishes the importance of guaranteeing compliance with applicable legal regulations.
+:keywords: Requirement, Legal, Law, Regulation, ASVS, GDPR, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R331. Guarantee legal compliance
 
 == Requirement
 
-The system must comply with the legal requirements of the jurisdiction to which
-it is subject.
+The system must comply with the legal requirements of the jurisdiction
+to which it is subject.
 
 == Findings
 
