--- a/content/pages/rules/privacy/316/index.adoc
+++ b/content/pages/rules/privacy/316/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/316/
 :category: privacy
-:description: This document contains the details of the security requirements related to the management and protection of data privacy in the organization. This requirement establishes the importance of allowing the users to request rectification of data belonging to them.
-:keywords: Requirement, Security, Data, GDPR, Rectification, Personal
+:description: This requirement establishes the importance of allowing users to request rectification of data belonging to them.
+:keywords: Requirement, Security, Data, GDPR, Rectification, Personal, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R316. Allow rectification requests
