--- a/content/pages/rules/source/323/index.adoc
+++ b/content/pages/rules/source/323/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/323/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of avoiding the inclusion of binary files in source code repositories.
-:keywords: Files, Source Code, Binary, Repository, CWE, ASVS
+:description: This requirement establishes the importance of avoiding the inclusion of binary files in source code repositories.
+:keywords: Files, Source Code, Binary, Repository, CWE, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R323. Exclude unverifiable files
