--- a/content/pages/rules/source/337/index.adoc
+++ b/content/pages/rules/source/337/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/337/
 :category: source
-:description: This document contains the details of the security requirements related to the definition and management of source code in the organization. This requirement establishes the importance of safely managing threads to avoid race conditions, especially in critical logic flows.
-:keywords: Thread, Safe, Race, Condition, ASVS, CWE
+:description: This requirement establishes the importance of safely managing threads to avoid race conditions, especially in critical business logic flows.
+:keywords: Thread, Safe, Race, Condition, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R337. Make critical logic flows thread safe
