feat(doc): #2994.201 add refs to some rules
- Added ASVS references to R183, R031 and R032
- Added CWE reference to R032
- Fixed some minor typos


Former-commit-id: f3740db1d7a31529996694851d95d93269d599d6

--- a/content/pages/rules/session/031/index.adoc
+++ b/content/pages/rules/session/031/index.adoc
@@ -55,3 +55,8 @@ Verify that logout and expiration invalidate the session token,
 such that the back button or a downstream relying party does not resume an
 authenticated session,
 including across relying parties.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.2 Client-side Data Protection.(8.2.3)]
+Verify that authenticated data is cleared from client storage,
+such as the browser *DOM*, after the client or session is terminated.
