--- a/content/pages/rules/data/183/index.adoc
+++ b/content/pages/rules/data/183/index.adoc
@@ -67,3 +67,8 @@ V8.1 General Data Protection.(8.1.2)]
 Verify that all cached or temporary copies of sensitive data stored on the
 server are protected from unauthorized access or purged/invalidated after the
 authorized user accesses the sensitive data.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.2 Client-side Data Protection.(8.2.3)]
+Verify that authenticated data is cleared from client storage,
+such as the browser *DOM*, after the client or session is terminated.
