--- a/content/pages/rules/session/032/index.adoc
+++ b/content/pages/rules/session/032/index.adoc
@@ -35,15 +35,26 @@ nor displayed as messages presented to the user nor stored in logs.
 
 == Reference
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/200.html[CWE-200: Exposure of Sensitive Information to an Unauthorized Actor].
 The product exposes sensitive information to an actor that is not explicitly
 authorized to have access to that information.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/598.html[CWE-598: Use of GET Request Method With Sensitive Query Strings]
+. [[r2]] link:https://cwe.mitre.org/data/definitions/319.html[CWE-319: Cleartext Transmission of Sensitive Information].
+The software transmits sensitive or security-critical data in cleartext in a
+communication channel that can be sniffed by unauthorized actors.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/598.html[CWE-598: Use of GET Request Method With Sensitive Query Strings]
 The web application uses the HTTP GET method to process a request and includes
 sensitive information in the query string of that request.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.1 Client-side Data Protection.(3.1.1)]
 Verify the application never reveals session tokens in URL parameters or error
 messages.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.1)]
+Verify that sensitive data is sent to the server in the *HTTP* message body or
+headers,
+and that query string parameters from any *HTTP* verb do not contain sensitive
+data.
